<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoBluetoothController</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_chat">Chat</string>
    <string name="button_open">Open</string>
    <string name="button_connect">Connect</string>
    <string name="button_close">Close</string>
    
    <string name="labelBTStatus">Bluetooth status:</string>
    <string name="labelPairedDevice">Paired device:</string>

</resources>
