
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/linearContainer"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:focusable="true" >

    <RelativeLayout
        android:id="@+id/leftContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/myLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusLeft="@id/myLabel"
            android:nextFocusUp="@id/myLabel"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonOpen"
            android:layout_alignBottom="@+id/buttonOpen"
            android:layout_toRightOf="@+id/buttonConnect"
            android:text="@string/button_close" />

        <TextView
            android:id="@+id/labelBTStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myLabel"
            android:layout_toRightOf="@+id/editText"
            android:text="@string/labelBTStatus" />

        <TextView
            android:id="@+id/labelPairedDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelBTStatus"
            android:layout_below="@+id/labelBTStatus"
            android:text="@string/labelPairedDevice" />

        <TextView
            android:id="@+id/textViewBTStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/labelBTStatus"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/labelBTStatus"
            android:text="Not Connected" />

        <TextView
            android:id="@+id/textViewPairedDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/labelPairedDevice"
            android:layout_alignBottom="@+id/labelPairedDevice"
            android:layout_alignLeft="@+id/textViewBTStatus"
            android:text="No Device" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/buttonClose"
            android:layout_below="@+id/labelPairedDevice"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText"
            android:layout_marginTop="25dp"
            android:text="@string/button_chat" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/button_connect" />

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/buttonConnect"
            android:layout_marginTop="23dp"
            android:text="@string/button_open" />
    </RelativeLayout>
	
	<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:layout_gravity="right"
	android:layout_weight="1"
	android:id="@+id/rightContainer">

		<ImageView
		    android:id="@+id/arrowUp"
		    android:layout_width="150dp"
		    android:layout_height="150dp"
		    android:layout_alignParentTop="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="30dp"
		    android:src="@drawable/arrow_up" />

		<ImageView
		    android:id="@+id/arrowDown"
		    android:layout_width="150dp"
		    android:layout_height="150dp"		    
		    android:layout_centerHorizontal="true"
		    android:layout_alignParentBottom="true"
		    android:layout_marginBottom="30dp"
		    android:src="@drawable/arrow_down" />
		
		<ImageView
		    android:id="@+id/arrowLeft"
		    android:layout_width="150dp"
		    android:layout_height="150dp"		    
		    android:layout_centerVertical="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="30dp"
		    android:src="@drawable/arrow_left" />

		<ImageView
		    android:id="@+id/arrowRight"
		    android:layout_width="150dp"
		    android:layout_height="150dp"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="39dp"
		    android:src="@drawable/arrow_right" />
		
	</RelativeLayout>
</LinearLayout>